changes in localBranch and merge with pull request

--- a/localBranch.html
+++ b/localBranch.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>created local branch and push to global repo and merge</h1>
+    <h2>changes in localBranch and merge with pull request</h2>
 </body>
 </html>
